# futu-moni

./: .gitignore  CLAUDE.md  README.md  diagnose.sh  futu_moni.py  pyproject.toml  run.sh
docs/: futu-native-app-session-report.schema.json  futu-native-app-session.redacted.json  futu-native-strategy-current.json
experiments/: README.md  ft_full_proxy.py  ft_market_probe.py  ft_mitm_proxy.py  ft_pf_proxy.py  ft_proxy.py  ft_selector_probe.py  ft_tcp_proxy.py
src/futu_moni/: UPSTREAM_LICENSE.txt  __init__.py  __main__.py  adapter.py  models.py  protocol.py  proxy.py  service.py
tests/: test_futu_native_service.py  test_protocol_inspection.py  test_proxy.py  test_quote_snapshot.py
upstream/: LICENSE  pyproject.toml
