[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "futu-moni"
version = "0.5.0"
description = "JP/HK/US market data via Futu native FT protocol — MITM proxy with multi-market support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.scripts]
futu-moni = "futu_moni.__main__:main"

[project.urls]
Repository = "https://github.com/bigbigmonkey123/futu-moni"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
