[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "futu-moni"
version = "0.1.0"
description = "Standalone market data client for Futu/Moomoo using the native FT protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.scripts]
futu-moni = "futu_moni:main"

[project.urls]
Repository = "https://github.com/bigbigmonkey123/futu-moni"
